# kcf_dsst

./: .gitignore  CMakeLists.txt  build.sh  rebuild.sh  run.sh
include/: timer.hpp
src/: main.cpp
src/tracker/: fhog.cpp  fhog.cu  fhog.hpp  fhogcuda.cpp  fhogcuda.h  kcftracker.cpp  kcftracker.cu  kcftracker.hpp
